# ML_Train

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/docker/: backend.Dockerfile
.github/workflows/: cd.yml  ci.yml
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: jobs.py
backend/app/core/: config.py  database.py  redis_client.py
backend/app/models/: __init__.py  job.py
backend/app/services/: job_service.py  metrics_collector.py
dashboard/: index.html  package.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: JobDetail.tsx  JobList.tsx
k8s/backend/: deployment.yaml
k8s/base/: namespace.yaml  postgres.yaml  redis.yaml
k8s/trainer/: job-template.yaml
orchestrator/: requirements.txt
orchestrator/app/: __init__.py  celery_app.py  tasks.py
shared/: setup.py
shared/schemas/: __init__.py  job.py
trainer/: Dockerfile  requirements.txt
trainer/training/: __init__.py  ddp_runner.py  main.py
