[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-train"
version = "0.1.0"
description = "Distributed ML Training Orchestrator"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "backend*", "orchestrator*", "trainer*"]
